--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ numpy==1.23.5
 pandas==1.5.3
 pydantic==1.10.7
 tensorflow_hub==0.13.0
-tensorflow_macos==2.9.2
+tensorflow_macos
 text_unidecode==1.3
 transformers==4.28.1
